edits to detailed html page

--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   </div>
   <div class="col-md-6">
 <!-- with charlie firstname will be what is stored in firebase .note: veronica will be dynamic-->
-   <a href="memberDetails.html?firstName=Leon"><img id="self" src="assets/images/me.jpg" alt="occupation" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";></a>
+   <a href="memberDetails.html?firstName=Deepika"><img id="self" src="assets/images/me.jpg" alt="occupation" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";></a>
     <h2 class="img-text" id="self"></h2>
   </div>
  </div>              
