styling of main html page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header id="masthead">
         <div class="container">
-            <a href="index.html" id="logo">Family Tree</a>
+            <h1>My Family Tree</h1>
         </div>
     </header>
     <div id="main-container" class="container">
@@ -58,11 +58,12 @@
                     </li>
                 </ul>
             </div>
-            <hr>
-            <div id="showFamilyTree">
+            <br><br><br><br><br><br><br><br>
+<!-- Uncomment the following to show family member details on main page -->
+<!--             <div id="showFamilyTree">
                 <table class="table">
                     <thead class="thead-light">
-                        <!-- firstName, lastName, birthDate, birthPlace, hobbies, occupation, profilePic, favMovie, favQuote, favSong -->
+                         firstName, lastName, birthDate, birthPlace, hobbies, occupation, profilePic, favMovie, favQuote, favSong 
                         <tr>
                             <th scope="col">Primary Member</th>
                             <th scope="col">Relationship</th>
@@ -82,6 +83,8 @@
                     </tbody>
                 </table>
             </div>
+--> 
+           <br><br>
             <form>
                 <div id='addFamilyMember' class="panel panel-default">
                     <div class="panel-heading" id="formheading">
