updated the landing page and hiding members with no data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contact | Your Name</title>
+    <title>My family Tree</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -37,19 +37,19 @@
             </div>
             <div id="displayTree" class="tree">
                 <ul>
-                    <li><a href="#" id='grandFather' target="_blank">Grand Father</a></li>
-                    <li><a href="#" id='grandMother' target="_blank">Grand Mother</a>
+                    <li><a href="#" id='grandFather' target="_blank"></a></li>
+                    <li><a href="#" id='grandMother' target="_blank"></a>
                         <ul>
-                            <li><a href="#" id='father' target="_blank">Father</a></li>
-                            <li><a href="#" id='mother' target="_blank">Mother</a>
+                            <li><a href="#" id='father' target="_blank"></a></li>
+                            <li><a href="#" id='mother' target="_blank"></a>
                                 <ul>
-                                    <li><a href="#" id='self' target="_blank">Self</a></li>
-                                    <li><a href="#" id='spouse' target="_blank">Spouse</a>
+                                    <li><a href="#" id='self' target="_blank"></a></li>
+                                    <li><a href="#" id='spouse' target="_blank"></a>
                                         <ul>
-                                            <li><a href="#" id='child1' target="_blank">child-1</a></li>
-                                            <li><a href="#" id='child2' target="_blank">child-2</a></li>
-                                            <li><a href="#" id='child3' target="_blank">child-3</a></li>
-                                            <li><a href="#" id='child4' target="_blank">child-4</a></li>
+                                            <li><a href="#" id='child1' target="_blank"></a></li>
+                                            <li><a href="#" id='child2' target="_blank"></a></li>
+                                            <li><a href="#" id='child3' target="_blank"></a></li>
+                                            <li><a href="#" id='child4' target="_blank"></a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -60,10 +60,9 @@
             </div>
             <br><br><br><br><br><br><br><br>
 <!-- Uncomment the following to show family member details on main page -->
-<!--             <div id="showFamilyTree">
+<!--              <div id="showFamilyTree">
                 <table class="table">
                     <thead class="thead-light">
-                         firstName, lastName, birthDate, birthPlace, hobbies, occupation, profilePic, favMovie, favQuote, favSong 
                         <tr>
                             <th scope="col">Primary Member</th>
                             <th scope="col">Relationship</th>
@@ -82,8 +81,8 @@
                     <tbody>
                     </tbody>
                 </table>
-            </div>
---> 
+            </div> -->
+ 
            <br><br>
             <form>
                 <div id='addFamilyMember' class="panel panel-default">
@@ -138,9 +137,9 @@
                         <label class="col-form-label" for="favoriteSong">Favorite Song</label>
                         <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
                         <label class="col-form-label" for="favoriteSong">Add Your Photo</label>
-                        <form action="/action_page.php">
+<!--                         <form action="/action_page.php">
                             <input type="file" name="profilePic" accept="image/*">
-                        </form>
+                        </form> -->
                     </div>
                 </div>
                 <button id='submit' type="submit" class="btn btn-primary">Submit</button>
