updated the landing page and hiding members with no data

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <input type="text" class="form-control" id="favoriteQuoteInput" placeholder="Enter your favorite quote ">
                         <label class="col-form-label" for="favoriteSong">Favorite Song</label>
                         <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
-                        <label class="col-form-label" for="favoriteSong">Add Your Photo</label>
+                        <!-- <label class="col-form-label" for="favoriteSong">Add Your Photo</label> -->
 <!--                         <form action="/action_page.php">
                             <input type="file" name="profilePic" accept="image/*">
                         </form> -->
