--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <label class="col-form-label" for="Relationship">Relationship </label>
                         <select id="relationWithMain">
                             <option id="self">Self</option>
-                            <option id="grandfather">Grand Father</option>
-                            <option id="grandmother">Grand Mother</option>
+                            <option id="grandfather">Grandfather</option>
+                            <option id="grandmother">Grandmother</option>
                             <option id="father">Father</option>
                             <option id="mother">Mother</option>
                             <option id="spouse">Spouse</option>
