--- a/memberDetails.html
+++ b/memberDetails.html
@@ -118,7 +118,7 @@
 
 <br><br>
 <!-- Wiki API -->
-<div class="container">
+<div class="container" id="news">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <h1>All About the Year You Were Born</h1>
