minor fix for grandfather and grandmother bug

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
             <div id="displayTree" class="tree">
                 <ul>
-                    <li><a href="#" id='grandFather' target="_blank"></a></li>
-                    <li><a href="#" id='grandMother' target="_blank"></a>
+                    <li><a href="#" id='grandfather' target="_blank"></a></li>
+                    <li><a href="#" id='grandmother' target="_blank"></a>
                         <ul>
                             <li><a href="#" id='father' target="_blank"></a></li>
                             <li><a href="#" id='mother' target="_blank"></a>
@@ -136,6 +136,7 @@
                         <input type="text" class="form-control" id="favoriteQuoteInput" placeholder="Enter your favorite quote ">
                         <label class="col-form-label" for="favoriteSong">Favorite Song</label>
                         <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
+                        <p>.</p>
                         <!-- <label class="col-form-label" for="favoriteSong">Add Your Photo</label> -->
 <!--                         <form action="/action_page.php">
                             <input type="file" name="profilePic" accept="image/*">
