major update to styling of family tree, headings, button fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Pangolin|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -19,7 +21,7 @@
     <div id="main-container" class="container">
         <div id='viewFamilyMember' class="panel panel-default">
             <div class="panel-heading" id="formheading">
-                View Family Tree details for ...
+                <h2>View Family Tree details for ...</h2>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-default viewFamilyGroup" name="Navin">Navin</button>
@@ -87,7 +89,8 @@
             <form>
                 <div id='addFamilyMember' class="panel panel-default">
                     <div class="panel-heading" id="formheading">
-                        Add Family Member for ...
+                    	<br><br><br><br><br><br><br><br><br><br><br><br>
+                        <h2>Add Family Member for ...</h2>
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-default familyGroup" name="Navin">Navin</button>
