styling to both html pages

--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
             </div> -->
  
            <br><br>
+
             <form>
                 <div id='addFamilyMember' class="panel panel-default">
                     <div class="panel-heading" id="formheading">
-                    	<br><br><br><br><br><br><br><br><br><br><br><br>
-                        <h2>Add Family Member for ...</h2>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <h2><br><br>Add Family Member for ...</h2>
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
+
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-default familyGroup" name="Navin">Navin</button>
                             </div>
