--- a/memberDetails.html
+++ b/memberDetails.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Family Member</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Pangolin|Special+Elite" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Pangolin|Special+Elite"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
@@ -21,19 +22,20 @@
 <body>
   <nav class="navbar navbar">
     <div class="container-fluid">
-      <nav class="navbar-right">      
+      <nav class="navbar-right">
         <a class="navbar-brand" href="index.html">Back to Family Tree</a>
       </nav>
-        </a>
+      </a>
     </div>
   </nav>
-  
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="card" style="width: 20rem;">
           <img class="card-img-top" id="family_member" src="assets/images/lucia.jpg" alt="family member" style="width:300px;height:auto;">
-          <br><br>
+          <br>
+          <br>
           <div class="card-body">
             <h1 class="card-title" id="fullName"></h1>
             <h4 class="card-text" id="faveQuote"></h4>
@@ -41,92 +43,121 @@
         </div>
       </div>
 
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <ul style="list-style-type:none">
+          <li>
+            <h3 id="age"></h3>
+          </li>
+          <li>
+            <h3 id="birthPlace"></h3>
+          </li>
+          <li>
+            <h3 id="occupation"></h3>
+          </li>
+          <li>
+            <h3 id="hobbies"></h3>
+          </li>
+          <li>
+            <h3 id="favoriteSong"></h3>
+          </li>
+          <li>
+            <h3 id="favoriteMovie"></h3>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div id="occupation" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px"
+        ;>
+        <!--     <img src="about:blank" id="occupation" alt="occupation" style="width: 70%; height: auto; object-fit: cover; padding-top:20px"> -->
+        <h2 id="occupation_title" class="img-text" id="job"></h2>
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="row">
+      <div id="hobby" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px"
+        ;>
+        <h2 id="hobbies_title" class="img-text"></h2>
+      </div>
+    </div>
+
+  </div>
+
+  <br>
+  <br>
+
+  <!-- youtube video replace "watch?v=" with "embed/" in the youtube link to display it in webpage -->
+  <!-- replace xxxxxx with video ID. console log shows it is "data.items[0].id.videoId" -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <iframe src="about:blank" id="faveVideo" width="420" height="345"></iframe>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+
+  <!-- IMDB API -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md6 col-lg-6">
+      <img id="moviePoster" alt="unknown" style="width: 70%; height: auto; object-fit: cover; padding-top:20px" ;>
+    </div>
+
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <ul style="list-style-type:none">
-      <li><h3 id = "age"></h3></li>
-      <li><h3 id = "birthPlace"></h3></li>
-      <li><h3 id = "occupation"></h3></li>
-      <li><h3 id = "hobbies"></h3></li>
-      <li><h3 id = "favoriteSong"></h3></li>
-      <li><h3 id = "favoriteMovie"></h3></li>
-      </ul>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>
+              <h4>Movie Name</h4>
+            </th>
+            <th>
+              <h4>Year</h4>
+            </th>
+            <th>
+              <h4>Actors</h4>
+            </th>
+            <th>
+              <h4>Rotten Tomatoes Rating</h4>
+            </th>
+            <th>
+              <h4>Box Office</h4>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <!-- Movie -->
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
-
-<div class="row">
-  <div id="occupation" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px";>
-<!--     <img src="about:blank" id="occupation" alt="occupation" style="width: 70%; height: auto; object-fit: cover; padding-top:20px"> -->
-    <h2 id="occupation_title" class="img-text" id="job"></h2>
-  </div>
-</div>
-
-<br><br>
-              
-<div class="row">
-  <div id="hobby" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px";>
-    <h2 id="hobbies_title" class="img-text"></h2>
-  </div>
-</div>
-
-</div> 
-
-<br><br>
-
-<!-- youtube video replace "watch?v=" with "embed/" in the youtube link to display it in webpage -->
-<!-- replace xxxxxx with video ID. console log shows it is "data.items[0].id.videoId" -->
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <iframe src="about:blank" id="faveVideo" width="420" height="345"></iframe>
-    </div>
-  </div>
-</div>
-
-<br><br>
-
-<!-- IMDB API -->
-<div class="row">
-  <div class="col-xs-12 col-sm-6 col-md6 col-lg-6">
-    <img id="moviePoster" alt="unknown" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";>
-  </div>
-
-  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    <table class="table">
-      <thead>
-        <tr>
-          <th><h4>Movie Name</h4></th>
-          <th><h4>Year</h4></th>
-          <th><h4>Actors</h4></th>
-          <th><h4>Rotten Tomatoes Rating</h4></th>
-          <th><h4>Box Office</h4></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <!-- Movie -->
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>     
-
-<br><br>
-<!-- Wiki API -->
-<div class="container" id="news">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-  <h1>All About the Year You Were Born</h1>
-  <div id="output"></div>
-</div>
-    <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src = "assets/javascript/memberDetails.js"></script>
+  <br>
+  <br>
+  <!-- Wiki API -->
+  <div class="container" id="news">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h1>All About the Year You Were Born</h1>
+        <div id="output"></div>
+      </div>
+      <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="assets/javascript/memberDetails.js"></script>
 </body>
+
 </html>
