fixing few minor issues and cleanup

--- a/memberDetails.html
+++ b/memberDetails.html
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="card" style="width: 20rem;">
-          <img class="card-img-top" id="family_member" src="assets/images/lucia.jpg" alt="family member" style="width:300px;height:auto;">
+          <img class="card-img-top" id="family_member" src="" alt="family member" style="width:300px;height:auto;">
           <br>
           <br>
           <div class="card-body">
@@ -69,19 +69,11 @@
 
 
     <div class="row">
-      <div id="occupation" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px"
-        ;>
-        <!--     <img src="about:blank" id="occupation" alt="occupation" style="width: 70%; height: auto; object-fit: cover; padding-top:20px"> -->
-        <h2 id="occupation_title" class="img-text" id="job"></h2>
+      <div id="occuptn" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="width: 50%; height: auto; object-fit: cover; padding-top:20px">
+        <h2 id="occupation_title" class="img-text"></h2>
       </div>
-    </div>
 
-    <br>
-    <br>
-
-    <div class="row">
-      <div id="hobby" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="width: 100%; height: auto; object-fit: cover; padding-top:20px"
-        ;>
+      <div id="hobby" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="width: 50%; height: auto; object-fit: cover; padding-top:20px">
         <h2 id="hobbies_title" class="img-text"></h2>
       </div>
     </div>
@@ -97,7 +89,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <iframe src="about:blank" id="faveVideo" width="420" height="345"></iframe>
+        <iframe src="about:blank" id="faveVideo" width="630" height="517"></iframe>
+        <h2 id="song_title" class="img-text"></h2>
       </div>
     </div>
   </div>
